Implement Death Counter feature with customizable Twitch integration and update documentation. Add fonts and necessary JavaScript files

--- a/death.html
+++ b/death.html
@@ -80,5 +80,6 @@
         }
         document.getElementById("number").addEventListener("click", sumar);
     </script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
