Update Death Counter to retrieve initial number from HTML for consistent counting across pages

--- a/death.html
+++ b/death.html
@@ -72,8 +72,8 @@
     </div>
     
     <script>
-        let number = 0;
         function sumar(){
+        let number = parseInt(document.getElementById("number").innerHTML);
         number++;
         document.getElementById("number").innerHTML = number;
         if(number==25){}
